--- a/cinematography.html
+++ b/cinematography.html
@@ -171,7 +171,7 @@
                     <h3>ლიტერატურული მემკვიდრეობა</h3>
                     <p>ილია ჭავჭავაძის შემოქმედება წარმოადგენს ქართული ლიტერატურის ოქროს ფონდს. მისი ნაწარმოებები დღესაც ინსპირაციის წყაროა ახალი თაობისთვის.</p>
                     <ul>
-                       <li><a href="interaction.html">ინტერაქცია</a></li>
+                        <li><a href="interaction.html">ინტერაქცია</a></li>
                         <li><a href="media.html">მედიატეკა</a></li>
                         <li><a href="contact.html">დაგვიკავშირდით</a></li>
                         <li><a href="translation.html">ხმა საზღვრებს გარეშე</a></li>
@@ -181,15 +181,15 @@
                 <div class="footer-section">
                     <h3>სწრაფი ნავიგაცია</h3>
                     <ul>
-                        <li><a href="index.html">მთავარი</a></li>
+                        <li><a class="active" href="index.html">მთავარი</a></li>
                         <li><a href="cinematography.html">კინემატოგრაფია</a></li>
-                         <li><a href="about_us.html">ჩვენს შესახებ</a></li>
+                        <li><a href="about_us.html">ჩვენს შესახებ</a></li>
                         <li><a href="biography.html">ბიოგრაფია</a></li>
-                        <li><a class="active" href="productions.html">ნაწარმოებები</a></li>
+                        <li><a href="productions.html">ნაწარმოებები</a></li>
                     </ul>
                 </div>
-                
-                <div class="footer-section">
+
+               <div class="footer-section">
                     <h3>დაკავშირება</h3>
                     <p>გაეცანით ილია ჭავჭავაძის ლიტერატურულ მემკვიდრეობას და იყავით ერთად ჩვენს ლიტერატურულ მოგზაურობაში.</p>
                     <div class="social-icons">
@@ -209,7 +209,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+        </footer>
 <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
