--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="banner-content">
                 <h1>„მე ვარ მნათობი ჩემი ერისა..."</h1>
                 <p>ილია ჭავჭავაძის სიტყვების სამყაროში გეპატიჟებით</p>
-                <a href="#" class="btn">დაათვალიერე მემკვიდრეობა</a>
+                <a href="productions.html" class="btn">დაათვალიერე მემკვიდრეობა</a>
             </div>
         </div>
     </header>
